--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,5 @@
 
-RpC="https://bsc-testnet.public.blastapi.io"
+RpC="https://eth-mainnet-public.unifra.io"
 
-API_Base_URL=https://refferal.archiecoin.online/
+API_Base_URL=https://refferal.bookofgatesofficial.com/
 API_KEY='my secret api key'
