--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.1",
     "aos": "^2.3.4",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
